chore: Use Java 11 Path.of instead of Paths.get (#3699)
* chore: Use Java 11 Path.of instead of Paths.get which just calls the same

* Add Path.of to jdkBaseUnconditionalDeref and BuildStringPassthruGraph

* Add change log for Path.of now known lookup type