@@ -4,7 +4,7 @@ import static edu.umd.cs.findbugs.test.CountMatcher.containsExactly;
 import static org.hamcrest.Matchers.emptyIterable;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -26,24 +26,24 @@ class AndroidNullabilityTest {
     @Test
     void objectForNonNullParam_isOk(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/ObjectForNonNullParam.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/android/support/annotation/NonNull.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/ObjectForNonNullParam.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/android/support/annotation/NonNull.class"));
         assertThat(bugCollection, emptyIterable());
     }
 
     @Test
     void objectForNonNullParam2_isOk(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/ObjectForNonNullParam2.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidx/annotation/NonNull.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/ObjectForNonNullParam2.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidx/annotation/NonNull.class"));
         assertThat(bugCollection, emptyIterable());
     }
 
     @Test
     void nullForNonNullParam_isDetected(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/NullForNonNullParam.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/android/support/annotation/NonNull.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/NullForNonNullParam.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/android/support/annotation/NonNull.class"));
 
         assertThat(bugCollection, containsExactly(1, bug("NP_NONNULL_PARAM_VIOLATION")));
     }
@@ -51,8 +51,8 @@ class AndroidNullabilityTest {
     @Test
     void nullForNonNullParam2_isDetected(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/NullForNonNullParam2.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidx/annotation/NonNull.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/NullForNonNullParam2.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidx/annotation/NonNull.class"));
 
         assertThat(bugCollection, containsExactly(1, bug("NP_NONNULL_PARAM_VIOLATION")));
     }
@@ -60,24 +60,24 @@ class AndroidNullabilityTest {
     @Test
     void checkedNullableReturn_isOk(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/CheckedNullableReturn.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/android/support/annotation/Nullable.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/CheckedNullableReturn.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/android/support/annotation/Nullable.class"));
         assertThat(bugCollection, emptyIterable());
     }
 
     @Test
     void checkedNullableReturn2_isOk(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/CheckedNullableReturn2.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidx/annotation/Nullable.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/CheckedNullableReturn2.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidx/annotation/Nullable.class"));
         assertThat(bugCollection, emptyIterable());
     }
 
     @Test
     void uncheckedNullableReturn_isDetected(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/UncheckedNullableReturn.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/android/support/annotation/Nullable.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/UncheckedNullableReturn.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/android/support/annotation/Nullable.class"));
 
         assertThat(bugCollection, containsExactly(1, bug("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")));
     }
@@ -85,8 +85,8 @@ class AndroidNullabilityTest {
     @Test
     void uncheckedNullableReturn2_isDetected(SpotBugsRunner spotbugs) {
         BugCollection bugCollection = spotbugs.performAnalysis(
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidAnnotations/UncheckedNullableReturn2.class"),
-                Paths.get("../spotbugsTestCases/build/classes/java/main/androidx/annotation/Nullable.class"));
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidAnnotations/UncheckedNullableReturn2.class"),
+                Path.of("../spotbugsTestCases/build/classes/java/main/androidx/annotation/Nullable.class"));
 
         assertThat(bugCollection, containsExactly(1, bug("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")));
     }
